# DigiCommPy

./: pyproject.toml
DigiCommSim/: Channel.py  Mapper.py
tests/: channel_test.py
