[tool.poetry]
name = "DigiCommSim"
version = "0.1.0"
description = ""
authors = ["snerzkristall <marvin.sacher@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
